--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -39,6 +39,6 @@ jobs:
           echo "NEW_VERSION=$NEW_VERSION" >>$GITHUB_ENV
           echo "name=NEW_VERSION=$NEW_VERSION" >>$GITHUB_OUTPUT
 
-      - name; Push changes
+      - name: Push changes
         run: |
           git push
