--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -2,20 +2,19 @@ name: Increment Versionn
 
 on:
   push:
-    branches:
-      -main
+    branches: [main]
 jobs:
   increment-version:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version:16
+          node-version: '16'
 
       - name: Install dependencies
         run: npm ci
